# bohra

./: .gitignore  .pre-commit-config.yaml  404.html  BigCI.env.yml  Containerfile  Dockerfile  MANIFEST.in  Pipfile  README.md  Untitled Diagram.drawio  bohra.def  bohra.py  bohra_v3.0.0.def  core.txt  core.vcf  environment.yml  example.config  index.html  mkdocs.yml  paper.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  tasks.py
.circleci/: config.yml
.github/workflows/: BigCI.yml  CI.yml  ci.yml  classifypangemeCI.yml  ectyperCI.yml  kleborate.yml  mkdocs.yml  mobsuite.yml  panaroo.yml  relationshipsCI.yml  seqquality.yml  snippy.yml  sonneitype.yml  stype.yml  tamr.yml  torstyverseCI.yml
bohra/: .code-workspace.code-workspace  ReRunSnpDetection.py  SnpDetection.py  Utils.py  __init__.py  bohra.nf  bohra.py  bohra_defaults.json  bohra_install.sh  bohra_install_v2.sh  bohra_logger.py  main.nf  nextflow.config  version.py  write_report.py  write_snakemake.py
bohra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bohra/commands/check/: check.py
bohra/commands/check_setup/: check_setup.py
bohra/commands/generate_input/: generate_input.py
bohra/commands/init_databases/: init_databases.py
bohra/commands/install/: install.py
bohra/commands/preview/: preview.py
bohra/commands/test/: bohratest.py  test.py
bohra/config/: databases.json  dependencies.json
bohra/environments/: abritamr.yml  any2fasta.yml  assemblers.yml  auriclass.yml  bohra.yml  classify-pangenome.yml  cluster.yml  coresnpfilter.yml  datasmryzr.yml  ectyper.yml  emmtyper.yml  fastp.yml  gubbins.yml  iqtree.yml  kleborate.yml  kraken2.yml  lissero.yml  mash.yml  meningotype.yml  mlst.yml  mob_suite.yml  ngmaster.yml  panaroo.yml  prokka.yml  quicktree.yml  relationships.yml  sccmec.yml  seqkit.yml  seqquality.yml  seqtk.yml  shigapass.yml  ska.yml  ska2.yml  snippy.yml  snpdists.yml  sonneitype.yml  stype.yml  tamr.yml  tbtamr.yml  torstyverse.yml  (+2 more)
bohra/launcher/: BohraAssembly.py  BohraBasic.py  BohraComparative.py  BohraMtb.py  BohraPangenome.py  BohraRun.py  BohraSetupFiles.py  BohraSetupResources.py  BohraTyping.py  CheckDeps.py  Deps.py  InstallDeps.py  RunBohra.py  SetupInput.py  TestBohra.py  Utils.py  bohra_databases.sh  bohra_install.sh
bohra/modules/abritamr/: environment.yml  main.nf  meta.yml
bohra/modules/any2fasta/: main.nf  meta.yml
bohra/modules/assemblers/: environment.yml  main.nf  meta.yml
bohra/scripts/: Install.py  InstallDeps.py  SetupInput.py  Utils.py  bohra_install.sh
bohra/subworkflows/: abritamr.nf  kraken.nf  mash.nf  mlst.nf  plasmids.nf  serotypes.nf  ska.nf  snippy.nf  sylph.nf  trees.nf
bohra/templates/: Snakefile_all  Snakefile_assembly  Snakefile_base  Snakefile_default_  Snakefile_snippy  Snakefile_snippy_assembly  bohra.smk  bohra_v2.smk  config_snippy.yaml  index.html  job.css  nf.config.j2  report_analysis.json  typers.json
bohra/tests/: conftest.py  test_bohra.py  variables.json
bohra/utils/: assemble.py  assembly_combine.py  assembly_stat.py  bohra.smk  collate_tomls.py  combine_kraken.py  combine_mlst.py  combine_resistome.py  combine_seqdata.py  compile.py  generate_yield.py  gubbins.py  iqtree_generator.sh  kraken.py  mash.py  mlst.py  move_outputs.py  pan_figure.py  preview.py  prokka.py  resistome.py  roary.py  run_iqtree.py  seqdata.py  snippy.py  snippy_core.py  snippy_qc.py  snp_dists.py  tomls.py  write_report.py  write_snakemake.py
bohra/workflows/: amr.nf  assemble.nf  assemble_typing.nf  collation.nf  common.nf  compile.nf  core.nf  default.nf  gubbins.nf  pangenome.nf  preview.nf  prokka.nf  read_assessment.nf  relationships.nf  roary.nf  seq_assessment.nf  snps.nf  species.nf  tbtamr.nf  tree_generator.nf  typing.nf  versions.nf
cookbook/comparative_genomics/: index.html
cookbook/faq/: index.html
cookbook/how_to/: index.html
cookbook/quality_control/: index.html
cookbook/tb_analysis/: index.html
docs/: index.md  installation.md
docs/cookbook/: comparative_genomics.md  faq.md  how_to.md  quality_control.md
docs/guides/: quality_control.md  tb_genomics.md
docs/pipelines/: amr_typing.md  assemble.md  basic.md  comparative.md  full.md  overview.md  preview.md  tb.md
docs/usage/: advanced.md  comparative.md  inputs.md  migration.md  overview.md  quality.md  quickguide.md  report.md  running_bohra.md
guides/comparative_genomics/: index.html
guides/overview/: index.html
guides/quality_control/: index.html
guides/tb_analysis/: index.html
installation/: index.html
license/: index.html
null/for_testing/: kraken2.tab
pipelines/amr_typing/: index.html
pipelines/assemble/: index.html
pipelines/basic/: index.html
pipelines/comparative/: index.html
pipelines/full/: index.html
pipelines/overview/: index.html
pipelines/preview/: index.html
pipelines/tb/: index.html
scripts/: ReRunSnpDetection.py  SnpDetection.py  write_snakemake.py
search/: search_index.json
templates/: index.html
test/: test.tab  test_bohra.py
tests/: conftest.py  test_bohra.py  test_checkdeps.py  test_cli_aliases.py  variables.json
tests/asm/: Lm_Cluster1_J1-108.fa  igas.fa  nmen.fa
tests/ectyper/: main.nf  typer.txt
tests/emmtyper/: main.nf  typer.txt
tests/gubbins/: gubbins.aln  main.nf
tests/kleborate/: main.nf  typer.txt
tests/kraken2/: main.nf
tests/lissero/: main.nf  typer.txt
tests/meningotype/: main.nf
tests/mlst/: main.nf
tests/ngmaster/: main.nf  typer.txt
tests/snippy/: main.nf  snps.tab
tests/snippy_clean/: main.nf
tests/snippy_core/: core.aln  main.nf
tests/snp_dists/: distances.tab  main.nf
usage/advanced/: index.html
usage/amr_typing/: index.html
usage/assemble/: index.html
usage/basic/: index.html
usage/comparative/: index.html
usage/full/: index.html
usage/inputs/: index.html
usage/migration/: index.html
usage/modules/: index.html
usage/overview/: index.html
usage/quality/: index.html
usage/quickguide/: index.html
usage/report/: index.html
usage/running_bohra/: index.html
usage/tb/: index.html
(+158 files in other folders)
