[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bohra"
dynamic = ["version"]
description = "A bioinformatics pipeline for analysing short read Illumina data microbiological public health."
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "bioinformatics",
    "microbiology",
    "public health"
]
requires-python = ">= 3.11"
authors = [
    { name = "Kristy Horan", email = "kristyhoran15@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pytest",
    "altair",
    "click",
    "pandas",
    "numpy",
    "jinja2",
    "psutil",
    "biopython==1.85",
    "scipy==1.16.1",
    "scikit-learn==1.7.1"
    
]

[project.optional-dependencies]
tests = [
    "flake8",
    "pytest",
    "pandas"
]

[project.scripts]
bohra = "bohra.bohra:cli"

[project.urls]
Homepage = "https://github.com/kristyhoran/bohra"

[tool.hatch.version]
path = "bohra/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/bohra/*","bohra/config/*", "bohra/modules/*","bohra/templates/*", "bohra/workflows/*", "bohra/subworkflows/*","bohra/references/*"
]
