[metadata]
name = bohra
author = Kristy Horan
author_email = kristyhoran15@gmail.com
description = A bioinformatics pipeline for analysing short read Illumina data microbiological public health.
version = 2.2.1
url = https://github.com/kristyhoran/bohra
classifiers =
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Development Status :: 4 - Beta 
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.8
packages = find:
zip_safe: False

install_requires =
    pytest
    altair
    jinja2
    biopython>=1.70
    pandas==1.0.5
    numpy==1.23.1
    psutil
    sh
    packaging
include_package_data = True
[options.extras_require]
tests =
  pytest
  flake8

[options.entry_points]
console_scripts =
 bohra=bohra.bohra:main

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 100
max-complexity = 18
select = B,C,E,F,W,T4,B9